Took character set and locale out of attribute and joined it with the character as a 'glyph'.  Lots of changes follow from that.

--- a/munin/Munin.vcproj
+++ b/munin/Munin.vcproj
@@ -208,6 +208,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\glyph.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\grid_layout.cpp"
 				>
 			</File>
@@ -327,6 +331,10 @@
 			</File>
 			<File
 				RelativePath=".\framed_component.hpp"
+				>
+			</File>
+			<File
+				RelativePath=".\glyph.hpp"
 				>
 			</File>
 			<File
