Separated character set and locale from element attributes, and instead combined it with the characters as a 'glyph'.  Frames are now comprised of subelements, meaning that scrollbars are a drop-in replacement later on.

--- a/munin/Munin.vcproj
+++ b/munin/Munin.vcproj
@@ -200,6 +200,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\filled_box.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\frame.cpp"
 				>
 			</File>
@@ -323,6 +327,10 @@
 			</File>
 			<File
 				RelativePath=".\edit.hpp"
+				>
+			</File>
+			<File
+				RelativePath=".\filled_box.hpp"
 				>
 			</File>
 			<File
