Added a viewport class, which can be commanded to look at a particular portion of a component.  Added scrollbars and a scroll_pane class to wrap them with.  Not quite complete yet.

--- a/guibuilder/guibuilder.vcproj
+++ b/guibuilder/guibuilder.vcproj
@@ -180,6 +180,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\sized_block.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\socket.cpp"
 				>
 			</File>
@@ -199,6 +203,10 @@
 			</File>
 			<File
 				RelativePath=".\server.hpp"
+				>
+			</File>
+			<File
+				RelativePath=".\sized_block.hpp"
 				>
 			</File>
 			<File
