--- a/trunk/munin/Munin.vcproj
+++ b/trunk/munin/Munin.vcproj
@@ -196,6 +196,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\dropdown_list.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\edit.cpp"
 				>
 			</File>
@@ -331,6 +335,10 @@
 			</File>
 			<File
 				RelativePath=".\container.hpp"
+				>
+			</File>
+			<File
+				RelativePath=".\dropdown_list.hpp"
 				>
 			</File>
 			<File
