Reimplementation of the Telnet protocol parser so that it does not re-parse the entire packet each time that it fails to complete a token.

--- a/odin/Odin.vcproj
+++ b/odin/Odin.vcproj
@@ -415,6 +415,14 @@
 				>
 			</File>
 		</Filter>
+		<Filter
+			Name="Telnet Detail Source Files"
+			>
+			<File
+				RelativePath=".\telnet\detail\parser.cpp"
+				>
+			</File>
+		</Filter>
 	</Files>
 	<Globals>
 	</Globals>
