--- a/trunk/test/test.vcproj
+++ b/trunk/test/test.vcproj
@@ -179,6 +179,10 @@
 			UniqueIdentifier="{4FC737F1-C7A5-4376-A066-2A32D752A2FF}"
 			>
 			<File
+				RelativePath=".\ansi_parser_fixture.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\dice_parser_fixture.cpp"
 				>
 			</File>
@@ -268,6 +272,10 @@
 			Filter="h;hpp;hxx;hm;inl;inc;xsd"
 			UniqueIdentifier="{93995380-89BD-4b04-88EB-625FBE52EBFB}"
 			>
+			<File
+				RelativePath=".\ansi_parser_fixture.hpp"
+				>
+			</File>
 			<File
 				RelativePath=".\dice_parser_fixture.hpp"
 				>
