--- a/trunk/munin/Munin.vcproj
+++ b/trunk/munin/Munin.vcproj
@@ -268,6 +268,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\toggle_button.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\types.cpp"
 				>
 			</File>
@@ -411,6 +415,10 @@
 			</File>
 			<File
 				RelativePath=".\text_area.hpp"
+				>
+			</File>
+			<File
+				RelativePath=".\toggle_button.hpp"
 				>
 			</File>
 			<File
