Partial implementation for Issue #104.  A statusbar component has been introduced and added to all screens.  And a clock is there for fun too.  Also added a helper function for images that enables it to take a vector of elements as well as a vector of vectors of elements.

--- a/munin/Munin.vcproj
+++ b/munin/Munin.vcproj
@@ -272,6 +272,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\status_bar.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\text_area.cpp"
 				>
 			</File>
@@ -427,6 +431,10 @@
 			</File>
 			<File
 				RelativePath=".\solid_frame.hpp"
+				>
+			</File>
+			<File
+				RelativePath=".\status_bar.hpp"
 				>
 			</File>
 			<File
