--- a/trunk/paradice9/Paradice9.vcproj
+++ b/trunk/paradice9/Paradice9.vcproj
@@ -45,7 +45,7 @@
 				PreprocessorDefinitions="WIN32;_DEBUG;_CONSOLE;_WIN32_WINNT=0x0501;_SCL_SECURE_NO_WARNINGS"
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
-				RuntimeLibrary="3"
+				RuntimeLibrary="2"
 				UsePrecompiledHeader="0"
 				WarningLevel="3"
 				DebugInformationFormat="4"
@@ -61,9 +61,9 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="cryptlib.lib"
+				AdditionalDependencies="cryptlibd.lib"
 				LinkIncremental="2"
-				AdditionalLibraryDirectories="$(BOOST_LIB_ROOT);$(CRYPTOPP_ROOT)\cryptopp\Win32\Output\Debug"
+				AdditionalLibraryDirectories="$(BOOST_LIB_ROOT);$(CRYPTOPP_LIB_ROOT)"
 				GenerateDebugInformation="true"
 				SubSystem="1"
 				TargetMachine="1"
@@ -138,7 +138,7 @@
 				Name="VCLinkerTool"
 				AdditionalDependencies="cryptlib.lib"
 				LinkIncremental="1"
-				AdditionalLibraryDirectories="$(BOOST_LIB_ROOT);$(CRYPTOPP_ROOT)\cryptopp\Win32\Output\Release"
+				AdditionalLibraryDirectories="$(BOOST_LIB_ROOT);$(CRYPTOPP_LIB_ROOT)"
 				GenerateDebugInformation="true"
 				SubSystem="1"
 				OptimizeReferences="2"
