Added a class that abstracts beasts from the bestiary/encounters.

--- a/paradice/Paradice.vcproj
+++ b/paradice/Paradice.vcproj
@@ -159,6 +159,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\beast.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\character.cpp"
 				>
 			</File>
@@ -222,6 +226,10 @@
 			</File>
 			<File
 				RelativePath=".\admin.hpp"
+				>
+			</File>
+			<File
+				RelativePath=".\beast.hpp"
 				>
 			</File>
 			<File
