--- a/trunk/paradice/Paradice.vcproj
+++ b/trunk/paradice/Paradice.vcproj
@@ -229,6 +229,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\active_encounter.hpp"
+				>
+			</File>
+			<File
 				RelativePath=".\admin.hpp"
 				>
 			</File>
