Reworked dice rolling to allow it to show for players (not yet beasts) in the active encounters frame.

--- a/paradice/Paradice.vcproj
+++ b/paradice/Paradice.vcproj
@@ -277,6 +277,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\dice.hpp"
+				>
+			</File>
+			<File
 				RelativePath=".\dice_roll_parser.hpp"
 				>
 			</File>
