Added Yggdrasil to new CMake files.

--- a/yggdrasil/bragi/CMakeLists.txt
+++ b/yggdrasil/bragi/CMakeLists.txt
@@ -3,3 +3,14 @@ set (yggdrasil_bragi_SOURCES
 )
 
 add_library(bragi ${yggdrasil_bragi_SOURCES})
+
+target_include_directories(bragi
+    PRIVATE
+        ${CMAKE_SOURCE_DIR}
+)
+
+target_compile_features(bragi
+    PUBLIC
+        cxx_inline_namespaces
+        cxx_strong_enums
+)
