--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -11,30 +11,40 @@ set (test_SOURCES
     telnet_parser_fixture.cpp
     telnet_stream_fixture.cpp
     telnet_subnegotiation_router_fixture.cpp
+    yggdrasil_munin_attribute_fixture.cpp
+    yggdrasil_munin_canvas_fixture.cpp
+    yggdrasil_munin_detail_string_to_elements_parser_fixture.cpp
+    yggdrasil_munin_element_fixture.cpp
+    yggdrasil_munin_estring_fixture.cpp
+    yggdrasil_munin_extent_fixture.cpp
+    yggdrasil_munin_filled_box_fixture.cpp
+    yggdrasil_munin_glyph_fixture.cpp
+    yggdrasil_munin_image_fixture.cpp
+    yggdrasil_munin_point_fixture.cpp
+    yggdrasil_munin_rectangle_fixture.cpp
 )
 
 
-enable_testing()
+add_executable(paradice_tester ${test_SOURCES})
 
-if (CPPUNIT_FOUND)
-    add_executable(paradice_tester ${test_SOURCES})
+target_include_directories(paradice_tester
+    PRIVATE
+        ${CMAKE_SOURCE_DIR}
+)
 
-    target_include_directories(paradice_tester
-        PRIVATE
-            ${CMAKE_SOURCE_DIR}
-    )
+target_compile_features(paradice_tester
+    PRIVATE
+        cxx_generic_lambdas
+)
 
-    target_compile_features(paradice_tester
-        PRIVATE
-            cxx_generic_lambdas
-    )
+target_link_libraries(
+    paradice_tester
+    odin
+    bragi
+    yg_munin
+    cppunit
+    ${Boost_SYSTEM_LIBRARY}
+)
 
-    target_link_libraries(
-        paradice_tester
-        odin
-        cppunit
-        ${Boost_SYSTEM_LIBRARY}
-    )
+add_test(paradice_test paradice_tester)
 
-    add_test(paradice_test paradice_tester)
-endif()
