Added configuration necessary for Travis-CI.

--- a/paradice9/CMakeLists.txt
+++ b/paradice9/CMakeLists.txt
@@ -26,11 +26,11 @@ target_link_libraries(paradice9
     paradice
     munin
     odin
-    ${BOOST_FILESYSTEM_LIBRARY}
-    ${BOOST_PROGRAM_OPTIONS_LIBRARY}
-    ${BOOST_RANDOM_LIBRARY}
-    ${BOOST_SERIALIZATION_LIBRARY}
-    ${BOOST_SIGNALS_LIBRARY}
-    ${BOOST_SYSTEM_LIBRARY}
+    ${Boost_FILESYSTEM_LIBRARY}
+    ${Boost_PROGRAM_OPTIONS_LIBRARY}
+    ${Boost_RANDOM_LIBRARY}
+    ${Boost_SERIALIZATION_LIBRARY}
+    ${Boost_SIGNALS_LIBRARY}
+    ${Boost_SYSTEM_LIBRARY}
     ${CRYPTO++_LIBRARIES}
 )
