Introduced a function that creates a model from a property tree.

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -11,6 +11,18 @@ set (test_SOURCES
     telnet_parser_fixture.cpp
     telnet_stream_fixture.cpp
     telnet_subnegotiation_router_fixture.cpp
+    yggdrasil_munin_attribute_fixture.cpp
+    yggdrasil_munin_canvas_fixture.cpp
+    yggdrasil_munin_create_model_from_ptree_fixture.cpp
+    yggdrasil_munin_detail_string_to_elements_parser_fixture.cpp
+    yggdrasil_munin_element_fixture.cpp
+    yggdrasil_munin_estring_fixture.cpp
+    yggdrasil_munin_extent_fixture.cpp
+    yggdrasil_munin_filled_box_fixture.cpp
+    yggdrasil_munin_glyph_fixture.cpp
+    yggdrasil_munin_image_fixture.cpp
+    yggdrasil_munin_point_fixture.cpp
+    yggdrasil_munin_rectangle_fixture.cpp
 )
 
 
