[BUILD] Re-enabled accidentally-deleted tests
enable_testing only applies from the current directory, so
really should be called in the root directory.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,6 +19,13 @@ find_package(Boost
 # required.
 find_package(Crypto++)
 
+# CppUnit is required for the unit testing.
+find_package(CppUnit)
+
+if (CPPUNIT_FOUND)
+    enable_testing()
+endif()
+
 add_subdirectory(odin)
 add_subdirectory(munin)
 add_subdirectory(paradice)
