Added cotire for automatic generation of pre-compiled headers

--- a/hugin/CMakeLists.txt
+++ b/hugin/CMakeLists.txt
@@ -34,3 +34,8 @@ target_compile_features(hugin
         cxx_strong_enums
         cxx_generic_lambdas
 )
+
+if (COMMAND cotire)
+    cotire(hugin)
+endif()
+
