Exclude dice_roll_parser from precompiled headers
This crashes Clang on Travis.  It doesn't matter so much, since most of
the headers are only used for this particular file.

--- a/paradice/CMakeLists.txt
+++ b/paradice/CMakeLists.txt
@@ -48,6 +48,11 @@ target_compile_features(paradice
         cxx_generic_lambdas
 )
 
+set_source_files_properties(dice_roll_parser.cpp
+    PROPERTIES
+        COTIRE_EXCLUDED TRUE
+)
+
 if (COMMAND cotire)
     cotire(paradice)
 endif()
