Restore cotire to Paradice, excluded telnet/stream from cotire

--- a/odin/CMakeLists.txt
+++ b/odin/CMakeLists.txt
@@ -29,6 +29,11 @@ target_compile_features(odin
         cxx_auto_type
 )
 
+set_source_files_properties(telnet/stream.cpp
+    PROPERTIES
+        COTIRE_EXCLUDED TRUE
+)
+
 if (COMMAND cotire)
     cotire(odin)
 endif()
