--- a/paradice9/CMakeLists.txt
+++ b/paradice9/CMakeLists.txt
@@ -8,6 +8,7 @@ add_executable(paradice9 ${paradice9_SOURCES})
 
 target_include_directories(paradice9
     PRIVATE
+		${Boost_INCLUDE_DIR}
         ${CMAKE_SOURCE_DIR}
 )
 
@@ -28,10 +29,12 @@ target_link_libraries(paradice9
     odin
     ${Boost_FILESYSTEM_LIBRARY}
     ${Boost_PROGRAM_OPTIONS_LIBRARY}
+	${Boost_REGEX_LIBRARY}
     ${Boost_RANDOM_LIBRARY}
     ${Boost_SERIALIZATION_LIBRARY}
     ${Boost_SIGNALS_LIBRARY}
     ${Boost_SYSTEM_LIBRARY}
+	${Boost_DATE_TIME_LIBRARY}
 )
 
 if (CRYPTO++_FOUND)
