Excluded client.cpp from cotire.

--- a/paradice/CMakeLists.txt
+++ b/paradice/CMakeLists.txt
@@ -63,6 +63,11 @@ set_source_files_properties(dice_roll_parser.cpp
         COTIRE_EXCLUDED TRUE
 )
 
+set_source_files_properties(client.cpp
+    PROPERTIES
+        COTIRE_EXCLUDED TRUE
+)
+
 if (COMMAND cotire)
     cotire(paradice)
 endif()
