--- a/.travis.yml
+++ b/.travis.yml
@@ -51,7 +51,7 @@ before_script:
   - ../cmake-3.2.3-Linux-x86_64/bin/cmake -DCMAKE_BUILD_TYPE=$CONFIG ..
 
 script:
-  - make VERBOSE=1
+  - make -j2
   - make test
 
 after_failure:
