--- a/.travis.yml
+++ b/.travis.yml
@@ -38,7 +38,7 @@ cache:
 before_install:
 # workaround for not having CMake 3.2
   - if [ ! -d "cmake-3.4.0-Linux-x86_64/bin" ]; then
-      wget http://www.cmake.org/files/v3.4/cmake-3.4.0-Linux-x86_64.tar.gz;
+      wget --no-check-certificate http://www.cmake.org/files/v3.4/cmake-3.4.0-Linux-x86_64.tar.gz;
       tar -xzf cmake-3.4.0-Linux-x86_64.tar.gz;
     fi
 # Install Crypto++, and fix the dependant-name bug
