--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,13 +1,10 @@
-set (test_SOURCES
-    dice_parser_fixture.cpp
-    munin_algorithm_fixture.cpp
-    paradice_test.cpp
-)
+if (GTEST_FOUND)
 
+    set (test_SOURCES
+        dice_parser_fixture.cpp
+        munin_algorithm_fixture.cpp
+    )
 
-enable_testing()
-
-if (CPPUNIT_FOUND)
     add_executable(paradice_tester ${test_SOURCES})
 
     target_include_directories(paradice_tester
@@ -21,15 +18,15 @@ if (CPPUNIT_FOUND)
     )
 
     target_link_libraries(
-    
         paradice_tester
         paradice
         munin
         odin
-        cppunit
+        ${GTEST_LIBRARY}
+        ${GTEST_MAIN_LIBRARY}
         ${Boost_SYSTEM_LIBRARY}
+        ${CMAKE_THREAD_LIBS_INIT}
     )
 
     add_test(paradice_test paradice_tester)
 endif()
-
