Decoupled Paradice from Hugin.
Note: Active Encounter currently disabled, since a new model needs
to be designed for that.

--- a/hugin/CMakeLists.txt
+++ b/hugin/CMakeLists.txt
@@ -1,4 +1,6 @@
 set (hugin_SOURCES
+    src/model/beast.cpp
+    src/model/encounter.cpp
     src/account_creation_screen.cpp
     src/active_encounter_view.cpp
     src/beast_editor.cpp
